[package]
name = "kerbalobjects"
version = "4.0.3"
authors = ["Luke Newcomb <newcomb.luke@protonmail.com>"]
edition = "2021"
license = "GPL-3.0"
description = "A crate that allows you to read or write a KerbalObject file."
readme = "README.md"
homepage = "https://github.com/newcomb-luke/kerbalobjects.rs"

[features]
default = ["ksm", "ko"]
ksm = []
ko = []

[dependencies]
flate2 = "1.0"
thiserror = "1.0"
